@@ -1,3 +1,8 @@
+2010-03-09  Mike Krüger  <mkrueger@novell.com>
+
+	* Mono.TextEditor.Highlighting/JaySyntaxMode.cs: Improved jay
+	  syntax mode.
+
 2010-03-08  Mike Krüger  <mkrueger@novell.com>
 
 	* Makefile.am:
